--- a/.env
+++ b/.env
@@ -10,3 +10,15 @@ PORT=4000
 
 # Environment
 NODE_ENV=development
+
+
+# Webhook Security
+WEBHOOK_SECRET=your-webhook-secret-key-change-this
+
+# Asset Management API (optional, untuk future integration)
+ASSET_API_URL=http://localhost:4001
+ASSET_API_KEY=your-asset-api-key
+
+# Change Management API (optional)
+CHANGE_API_URL=http://localhost:4002
+CHANGE_API_KEY=your-change-api-key
